Added some articles and basic structure to introduction

--- a/README
+++ b/README
@@ -9,3 +9,15 @@ Use command `make` to compile and the pdf-file is in build/thesis.pdf.
 == Useful links ==
 
 tktltiki-guide: http://www.cs.helsinki.fi/u/leino/opetus/tiki-k09/pohja/latex/tktltiki-ohje.pdf
+
+== Used articles ==
+
+http://ieeexplore.ieee.org/search/freesrchabstract.jsp?arnumber=5410700
+http://portal.acm.org/citation.cfm?id=1562164.1562169
+http://portal.acm.org/citation.cfm?id=1779599.1779600
+
+Some databases:
+http://portal.acm.org/citation.cfm?id=1883519.1883524
+http://portal.acm.org/citation.cfm?id=1883537.1883544
+http://portal.acm.org/citation.cfm?id=1883478.1883486
+http://portal.acm.org/citation.cfm?id=1804370.1804375
