--- a/essee.tex
+++ b/essee.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{report}
+\documentclass[a4paper]{article}
 
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -6,11 +6,15 @@
 \usepackage{lmodern} %% Neat font
 
 \author{Sami Saada}
-\title{Essee}
+\title{Ohjelmointiin liittyvän ongelmaratkaisuprosessin tukeminen opetuksessa}
 
 \begin{document}
 
-\maketitle
+\maketitle \thispagestyle{empty}
+
+\newpage
+
+\setcounter{page}{1}
 
 lol foobar
 
