historiaa ja peruskysymysten asettelua

--- a/essee.tex
+++ b/essee.tex
@@ -16,6 +16,22 @@
 
 \setcounter{page}{1}
 
-lol foobar
+\section{Ohjelmoinnin opetuksen historia}
+
+Ohjelmoinnin opetus on hankalaa ja siitä ei ole konsensusta, mikä on tehokkain tapa opettaa ohjelmointia [Vihavainen et al. 2011a]. Tästä asiasta on väitelty usean vuosikymmenen ajan. Useat yliopistot opettavat vielä perinteisen kaavan mukaisesti.
+
+\subsection{Peruskysymysten asettelu}
+
+David Griesin [Gries 1974] näkemys ohjelmoinnin opetuksesta sisältää yhä monia oleellisia asioita, jotka ovat vieläkin relevantteja opetusta kehittäessä. Griesin mukaan ensimmäisellä ohjelmointikurssilla opiskelijan tuli saada vastaukset kysymyksiin: Miten ongelmia ratkaistaan? Miten kuvataan algoritmillinen ratkaisu ongelmaan? Miten algoritmi todetaan oikeelliseksi?
+
+Griesin ohjelmointikurssin pääteemana on rakenteellinen ohjelmointi. Hänen mukaan kurssilla tulee opettaa yleisiä ongelmanratkaisutapoja. Opiskelijat oppivat yleensä ratkaisemaan tietyn tyyppisiä ongelmia eikä yleistä ongelmanratkaisua. Opiskelijoille on tarkoistus opettaa, miten ratkaistaan ongelma, johon on algoritmillinen ratkaisu.
+
+Perinteiseen tapaan opiskelijoille kuvataan työkalut ja annetaan muutama esimerkki. Tämän jälkeen heitä pyydetään kirjoittamaan ohjelmia. Heille ei sanota melkein mitään siitä, miten heidän tulisi aloittaa. Opiskelijoiden tulee itse löytää mahdolliset toteutustavat ja keinot jäsentää omat ajatuksensa. Myöskin mysteeriksi jää se, miten päädytään hyvin jäsennettyyn, kirjoitettuun ja luettavaan ohjelmakoodiin. Griesillä on tähän hyvä analogia:
+
+\begin{quotation}
+Kaapintekokurssilla ohjaaja esittelee sahan, laudan, vasaran ja muutaman muun työkalun parin minuutin ajan. Sitten hän näyttää kauniiksi viimeistellyn kaapin ja lopulta antaa opiskelijoille pari viikkoa aikaa toteuttaa oma kaappi.
+
+Voisit ajatella ohjaajan olevan hullu!
+\end{quotation}
 
 \end{document}
