--- a/essee.tex
+++ b/essee.tex
@@ -54,6 +54,8 @@ Nämä säännöt ovat sovellettavissa ohjelmointiin. Jos näitä sääntöjä t
 
 \subsection{Yksinkertaisilla askelilla eteenpäin}
 
-Ohjelmoijien tulee tähdätä rakenteeltaan yksinkertaisiin algoritmeihin [Gries 1974]. Ohjelman tulee koostua pienistä osista. Jokaisen palasen on oltava riittävän pieni, jotta sen voi ymmärtää. Jos pienet palaset pystyy itsenäisesti todistamaan toimiviksi ja täten koko ohjelman voi todistaa toimivaksi. Oppiessaan lisää on mahdollista törmätä parempaan tapaan toteuttaa ohjelman palanen. Tällöin siiheb on syytä palata ja toteuttaa se uudelleen paremmalla tavalla. Kommentointi on tärkeä osa ohjelman kehitystä. Tosin yksikäsitteiset itseään kommentoivat osat voidaan jättää kommentoimatta. Toinen tärkeä osa on kaavuot, jotka toimivat ohjelmointiprosessin apuna. Nämä kummatkin ovat osa ohjelman dokumentointia. Ohjelman dokumentoinnin tulee rohkaista systemaattiseen ja rakenteelliseen ohjelmointiin, ja ohjelmoijien tulee käyttää sitä ohjelmoidessaan.
+Ohjelmoijien tulee tähdätä rakenteeltaan yksinkertaisiin algoritmeihin [Gries 1974]. Ohjelman tulee koostua pienistä osista. Jokaisen palasen on oltava riittävän pieni, jotta sen voi ymmärtää. Jos pienet palaset pystyy itsenäisesti todistamaan toimiviksi ja täten koko ohjelman voi todistaa toimivaksi. Oppiessaan lisää on mahdollista törmätä parempaan tapaan toteuttaa ohjelman palanen. Tällöin siiheb on syytä palata ja toteuttaa se uudelleen paremmalla tavalla.
+
+Kommentointi on tärkeä osa ohjelman kehitystä. Tosin yksikäsitteiset itseään kommentoivat osat voidaan jättää kommentoimatta. Toinen tärkeä osa on kaavuot, jotka toimivat ohjelmointiprosessin apuna. Nämä kummatkin ovat osa ohjelman dokumentointia. Ohjelman dokumentoinnin tulee rohkaista systemaattiseen ja rakenteelliseen ohjelmointiin, ja ohjelmoijien tulee käyttää sitä ohjelmoidessaan.
 
 \end{document}
