--- a/essee.tex
+++ b/essee.tex
@@ -58,4 +58,15 @@ Ohjelmoijien tulee tähdätä rakenteeltaan yksinkertaisiin algoritmeihin [Gries
 
 Kommentointi on tärkeä osa ohjelman kehitystä. Tosin yksikäsitteiset itseään kommentoivat osat voidaan jättää kommentoimatta. Toinen tärkeä osa on kaavuot, jotka toimivat ohjelmointiprosessin apuna. Nämä kummatkin ovat osa ohjelman dokumentointia. Ohjelman dokumentoinnin tulee rohkaista systemaattiseen ja rakenteelliseen ohjelmointiin, ja ohjelmoijien tulee käyttää sitä ohjelmoidessaan.
 
+
+%% Rumasti lähdeviitteet HAX HAX
+\newpage
+
+\section{Lähteet}
+
+\begin{description}
+  \item [Vihavainen et al.] Vihavainen, A., Paksula, M., Luukkainen, M.: Extreme Apprenticeship Method in Teaching Programming for Beginners 2011
+  \item [Gries 1974] Gries, D.: What Should We Teach in an Introductory Programming Course? 1974
+\end{description}
+
 \end{document}
