tktl style to utf-8 and in use on essay

--- a/essee.tex
+++ b/essee.tex
@@ -1,20 +1,30 @@
-\documentclass[a4paper]{article}
+\documentclass{tktltiki}
 
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
-\usepackage[finnish]{babel}
 \usepackage{lmodern} %% Neat font
 
-\author{Sami Saada}
-\title{Ohjelmointiin liittyvän ongelmaratkaisuprosessin tukeminen opetuksessa}
+
 
 \begin{document}
 
-\maketitle \thispagestyle{empty}
+\author{Sami Saada}
+\title{Ohjelmointiin liittyvän ongelmaratkaisuprosessin tukeminen opetuksessa}
+\level{Kandidaatintutkielma}
 
-\newpage
+\maketitle
 
-\setcounter{page}{1}
+\doublespacing
+
+\faculty{Matemaattis-luonnontieteellinen}
+\department{Tietojenkäsittelytieteen laitos}
+\subject{Tietojenkäsittelytiede}
+
+\keywords{Ohjelmointiprosessi}
+
+\begin{abstract}
+Tiivistelmä
+\end{abstract}
+
+\mytableofcontents
 
 \section{Ohjelmoinnin opetuksen historia}
 
@@ -100,5 +110,9 @@ Mañana periaatteessa syntyneitä metodeja ei tarvitse toteuttaa samantien.
   \item [Gries 1974] Gries, D.: What Should We Teach in an Introductory Programming Course? (1974)
   \item [Vihavainen et al. 2011] Vihavainen, A., Paksula, M., Luukkainen, M.: Extreme Apprenticeship Method in Teaching Programming for Beginners (2011)
 \end{description}
+
+\bibliographystyle{tktl}
+
+\lastpage
 
 \end{document}
