--- a/johdanto.tex
+++ b/johdanto.tex
@@ -1,10 +1,10 @@
 \section{Johdanto}
 
-- Mik‰ on ACID?
+- Mik√§ on ACID?
 
-- Mik‰ on SQL?
+- Mik√§ on SQL?
 
-- Mik‰ on relaatiotietokanta?
+- Mik√§ on relaatiotietokanta?
 
 - Relaatiotietokannan rajoituksia
 
@@ -14,32 +14,32 @@ o Hajautettu skaalaus ei toimi helposti relaatiokantojen kanssa.
 
 * Monimutkaisuus\\
 o Data on muutettava sopimaan tauluihin\\
-o Tietosis‰ltˆ voi muuttua monimutkaiseksi, vaikeaksi ja hitaaksi k‰sitell‰.
+o Tietosis√§lt√∂ voi muuttua monimutkaiseksi, vaikeaksi ja hitaaksi k√§sitell√§.
 
 * SQL-kieli\\
 o Sopii hyvin rakenteellisen tiedon kanssa, muttei muun tyyppisen tiedon kanssa.\\
-o Voi johtaan suureen m‰‰r‰‰n monimutkaista koodia ja ei sovi ketter‰‰n kehitykseen.
+o Voi johtaan suureen m√§√§r√§√§n monimutkaista koodia ja ei sovi ketter√§√§n kehitykseen.
 
 * Suuri joukko ominaisuuksia\\
-o K‰ytt‰j‰t eiv‰t usein tarvitse kaikkia ominaisuuksia, kuten ei myˆsk‰‰n niiden tuomaa kustannusta ja monimutkaisuutta.
+o K√§ytt√§j√§t eiv√§t usein tarvitse kaikkia ominaisuuksia, kuten ei my√∂sk√§√§n niiden tuomaa kustannusta ja monimutkaisuutta.
 
-- Mik‰ on NoSQL?
+- Mik√§ on NoSQL?
 
 - Millaisia toteutustapoja on?
 
 * Avain-arvo -parit\\
 * sarakepainotteiset tietokannat (column-oriented databases)
 
-- Mit‰ etua NoSQL:st‰ on SQL:‰‰n verrattuna?
+- Mit√§ etua NoSQL:st√§ on SQL:√§√§n verrattuna?
 
-* Nopea tiedonk‰sittely\\
+* Nopea tiedonk√§sittely\\
 o ACIDista huolehtiminen tekee relaatiokannoista hitaampia\\
-o Tietomallit yleens‰ yksinkertaisempia
+o Tietomallit yleens√§ yksinkertaisempia
 
-- Millaisia huolia NoSQL:st‰ on?
+- Millaisia huolia NoSQL:st√§ on?
 
 * Kyselyjen kirjoittaminen\\
 * Ei tue natiivisti ACIDia\\
 * Yhdenmukaisuus\\
-* NoSQL ei ole viel‰ tuttu kaikille\\
-* Asiakastuki ja hallintatyˆkalut puuttuvat
+* NoSQL ei ole viel√§ tuttu kaikille\\
+* Asiakastuki ja hallintaty√∂kalut puuttuvat
