--- a/thesis.tex
+++ b/thesis.tex
@@ -13,13 +13,13 @@
 \doublespacing
 
 \faculty{Matemaattis-luonnontieteellinen}
-\department{Tietojenk‰sittelytieteen laitos}
-\subject{Tietojenk‰sittelytiede}
+\department{Tietojenk√§sittelytieteen laitos}
+\subject{Tietojenk√§sittelytiede}
 
 \keywords{NoSQL}
 
 \begin{abstract}
-Tiivistelm‰
+Tiivistelm√§
 \end{abstract}
 
 \mytableofcontents
