--- a/tktltiki.cls
+++ b/tktltiki.cls
@@ -97,7 +97,7 @@
 \ProcessOptions\relax
 \LoadClass{article}[2000/05/19]
 \RequirePackage{latexsym}[1998/08/17 v2.2e Standard LaTeX package (lasy symbols)]
-\RequirePackage[latin9]{inputenc}[2000/07/01 v0.996 Input encoding file ]
+\RequirePackage[utf8]{inputenc}[2000/07/01 v0.996 Input encoding file ]
 \RequirePackage[T1]{fontenc}[2000/08/30 v1.91 Standard LaTeX package]
 \if@finnish
   \RequirePackage[finnish]{babel}[2001/03/01 v3.7h The Babel package]
@@ -210,7 +210,7 @@
   \hspace{1em}%
 }
 \RequirePackage{openbib}
-\addto\captionsfinnish{\def\refname{L‰hteet}}
+\addto\captionsfinnish{\def\refname{L√§hteet}}
 \addto\captionsenglish{\def\enclname{Appendices}}
 \addto\captionsswedish{\def\enclname{Bilagor}}
 \renewenvironment{thebibliography}[1]
@@ -237,7 +237,7 @@
 \level{}
 
 \addto\captionsfinnish{%
-  \def\dateofacceptance{hyv‰ksymisp‰iv‰}%
+  \def\dateofacceptance{hyv√§ksymisp√§iv√§}%
   \def\grade{arvosana}%
   \def\instructor{arvostelija}%
   \def\uh{HELSINGIN YLIOPISTO}%
@@ -255,7 +255,7 @@
 \addto\captionsswedish{%
   \def\dateofacceptance{godk.datum}%
   \def\grade{vitsord}%
-  \def\instructor{bedˆmare}%
+  \def\instructor{bed√∂mare}%
   \def\uh{HELSINGFORS UNIVERSITET}%
   \def\helsinki{Helsingfors}%
   \def\ccs{ACM Computing Classification System (CCS):}%
@@ -317,8 +317,8 @@
 
 \addto\captionsfinnish{%
   \faculty{Matemaattis-luonnontieteellinen tiedekunta}
-  \department{Tietojenk‰sittelytieteen laitos}%
-  \subject{Tietojenk‰sittelytiede}
+  \department{Tietojenk√§sittelytieteen laitos}%
+  \subject{Tietojenk√§sittelytiede}
 }
 \addto\captionsenglish{%
   \faculty{Faculty of Science}
@@ -327,7 +327,7 @@
 }
 \addto\captionsswedish{%
   \faculty{Matematisk-naturvetenskapliga fakulteten}
-  \department{Institutionen fˆr datavetenskap}%
+  \department{Institutionen f√∂r datavetenskap}%
   \subject{Datavetenskap}
 }
 \newsavebox{\@abstract}
