--- a/johdanto.tex
+++ b/johdanto.tex
@@ -1,45 +1,3 @@
 \section{Johdanto}
 
-- Mikä on ACID?
-
-- Mikä on SQL?
-
-- Mikä on relaatiotietokanta?
-
-- Relaatiotietokannan rajoituksia
-
-* Skaalautuvuus\\
-o Tietokantaa ajetaan tehokkaammalla koneella\\
-o Hajautettu skaalaus ei toimi helposti relaatiokantojen kanssa.
-
-* Monimutkaisuus\\
-o Data on muutettava sopimaan tauluihin\\
-o Tietosisältö voi muuttua monimutkaiseksi, vaikeaksi ja hitaaksi käsitellä.
-
-* SQL-kieli\\
-o Sopii hyvin rakenteellisen tiedon kanssa, muttei muun tyyppisen tiedon kanssa.\\
-o Voi johtaan suureen määrään monimutkaista koodia ja ei sovi ketterään kehitykseen.
-
-* Suuri joukko ominaisuuksia\\
-o Käyttäjät eivät usein tarvitse kaikkia ominaisuuksia, kuten ei myöskään niiden tuomaa kustannusta ja monimutkaisuutta.
-
-- Mikä on NoSQL?
-
-- Millaisia toteutustapoja on?
-
-* Avain-arvo -parit\\
-* sarakepainotteiset tietokannat (column-oriented databases)
-
-- Mitä etua NoSQL:stä on SQL:ään verrattuna?
-
-* Nopea tiedonkäsittely\\
-o ACIDista huolehtiminen tekee relaatiokannoista hitaampia\\
-o Tietomallit yleensä yksinkertaisempia
-
-- Millaisia huolia NoSQL:stä on?
-
-* Kyselyjen kirjoittaminen\\
-* Ei tue natiivisti ACIDia\\
-* Yhdenmukaisuus\\
-* NoSQL ei ole vielä tuttu kaikille\\
-* Asiakastuki ja hallintatyökalut puuttuvat
+% Ongelman esittely
