--- a/thesis.tex
+++ b/thesis.tex
@@ -1,22 +1,21 @@
 \documentclass{tktltiki}
-\usepackage{url}
-\usepackage{lmodern} %% Neat font
+\usepackage{lmodern}
+
+\author{Sami Saada}
+\title{Ohjelmointiin liittyvän ongelmaratkaisuprosessin tukeminen opetuksessa}
+\level{Kandidaatintutkielma}
+\faculty{Matemaattis-luonnontieteellinen}
+\department{Tietojenkäsittelytieteen laitos}
+\subject{Tietojenkäsittelytiede}
+\keywords{Ohjelmointiprosessi}
+
+\numberofpagesinformation{\numberofpages\ sivua}
 
 \begin{document}
-
-\title{NoSQL}
-\author{Sami Saada}
-\level{Kandidaatintutkielma}
 
 \maketitle
 
 \doublespacing
-
-\faculty{Matemaattis-luonnontieteellinen}
-\department{Tietojenkäsittelytieteen laitos}
-\subject{Tietojenkäsittelytiede}
-
-\keywords{NoSQL}
 
 \begin{abstract}
 Tiivistelmä
@@ -25,10 +24,10 @@ Tiivistelmä
 \mytableofcontents
 
 %% Johdato-osuus
-\include{johdanto}
+\input{johdanto}
 
 \bibliographystyle{tktl}
-\bibliography{johdanto}
+\bibliography{thesis}
 
 \lastpage
 
