structure for thesis

--- a/thesis.tex
+++ b/thesis.tex
@@ -23,8 +23,8 @@ Tiivistelmä
 
 \mytableofcontents
 
-%% Johdato-osuus
 \input{johdanto}
+\input{xa}
 
 \bibliographystyle{tktl}
 \bibliography{thesis}
