basic structure of thesis

--- a/johdanto.tex
+++ b/johdanto.tex
@@ -1,7 +1,7 @@
 \section{Johdanto}
 
-% Ongelman esittely
-
 % Millainen on vanha malli?
 
 % Mitä ongelmia on vanhassa mallissa?
+% - Keskitytään liikaa kielen rakenteisiin
+% - Miten Java pahensi tätä?
