--- a/thesis.tex
+++ b/thesis.tex
@@ -24,7 +24,9 @@ Tiivistelmä
 \mytableofcontents
 
 \input{johdanto}
+\input{prosessi}
 \input{xa}
+\input{johtopaatos}
 
 \bibliographystyle{tktl}
 \bibliography{thesis}
