--- a/xa.tex
+++ b/xa.tex
@@ -1,7 +1,14 @@
 \section{Extreme Apprenticeship}
 
-Extreme Apprenticeship on Helsingin yliopiston tietojenkäsittelytieteen laitoksella lanseerattu versio ohjelmoinnin pajaopetuksesta \cite{Vihavainen:2011:EAM:1953163.1953196}.
-
 % Tämä kappale kertoo tktl:llä käytettävästä pajamallista
 
+Extreme Apprenticeship on Helsingin yliopiston tietojenkäsittelytieteen
+laitoksella lanseerattu versio ohjelmoinnin pajaopetuksesta
+\cite{Vihavainen:2011:EAM:1953163.1953196}.
+
+% Mitä ongelmia?
 % XA on liian extreme => seuraa ongelma
+
+% Miten voidaan parantaa:
+% Luennollaa koodataan
+% Pajassa kysytään miksi toteutettu valitulla tavalla
