first version of introduction

--- a/johdanto.tex
+++ b/johdanto.tex
@@ -1,7 +1,38 @@
 \section{Johdanto}
 
-% Millainen on vanha malli?
+Perinteisesti ohjelmointia on opetettu kirjallista materiaalia näyttämällä ja
+muutamalla materiaaliin pohjautuvalla yksinkertaisella ohjelmointitehtävällä.
+Tällä tavalla järjestetyllä kurssilla opiskelijat oppivat lähinnä ratkaisemaan
+tietyntyyppisiä tehtäviä eikä yleistä ongelmanratkaisua
+\cite{Gries:1974:WTI:953057.810447}.
 
-% Mitä ongelmia on vanhassa mallissa?
-% - Keskitytään liikaa kielen rakenteisiin
-% - Miten Java pahensi tätä?
+Aloittelijoille suunnatut tekstit käsittelevät yleisten ohjelmointiin liittyvien
+rakenteiden sijaan ohjelmointikielen rakenteisiin
+\cite{Caspersen:2006:NPO:1176617.1176741, Vihavainen:2011:EAM:1953163.1953196}.
+Opiskelijoille esitetään ongelma ja sen ratkaiseva valmis ohjelma. Ohjelman
+rakenteet käydään lävitse materiaalissa tai luennolla. Tällöin opiskelijoille
+syntyy kuva, että ohjelmat syntyvät yhdellä askeleella sopivia rakenteita
+yhdistelemällä ja ohjelman todellinen kehitysprosessi ei ilmene opiskelijalle.
+Seurauksena tästä on se, että opiskelijat ymmärtävät eri rakenteet, mutta eivät
+osaa luoda niitä yhdistelemällä toimivaa ohjelmaa.
+
+Esimerkkiohjelmat ovat yleensä pieniä ja koostuvat yksinkertaisista askelista,
+eikä tämä vastaa todellisuutta. Lisäksi ne opettavat vain kielen rakenteita
+\cite{Astrachan:1995:ACA:199691.199694}. Merkittävän kokoiset tehtävät vaativat
+ulkoista tukea \cite{Kolling:2008}. Ulkoisena tukena tarkoitan kehitysympäristöä
+(IDE). Tavallisesti tällainen ympäristö ei anna hyvää tukea opettamis- ja
+oppimisprosessille. Javan ottaminen opetuskieleksi toi hyviä ja huonoja asioita
+mukanaan. Sille on hyviä kehitysympäristöjä ja se on suhteellisen vakaa kieli.
+Kuitenkin se lisäsi enemmän keskittymistä kielen rakenteisiin.
+
+Ohjelmointiprosessin olessa salassa, opiskelijat eivät pysty ratkaisemaan
+annettuja haasteita tai heille kehittyy oma prosessi
+\cite{Caspersen:2006:NPO:1176617.1176741}. Yleensä itsekehittynyt prosessi
+johtaa huonoihin lopputuloksiin. Ohjelmoinnin oppiminen ei saa olla ainoana
+tavoitteena vaan myös koodin laadun kehitys on tärkeää.
+
+Olemassa olevan koodin lukeminen ja muokkaaminen ovat yleisiä tehtäviä kelle
+tahansa ohjelmoijalle \cite{Kolling:2008}. Oppimisen kannalta on suotavaa käydä
+lävitse muiden kirjottamaa koodia varhaisessa vaiheessa. Muiden koodin
+korjaaminen auttaa hahmottamaan, mitkä ovat hyviä käytäntöjä ja mitä hyötyä on
+ylläpidettävästä koodista.
