--- a/thesis.bib
+++ b/thesis.bib
@@ -1,3 +1,22 @@
+@article{Astrachan:1995:ACA:199691.199694,
+ author = {Astrachan, Owen and Reed, David},
+ title = {AAA and CS 1: the applied apprenticeship approach to CS 1},
+ journal = {SIGCSE Bull.},
+ issue_date = {March 1995},
+ volume = {27},
+ number = {1},
+ month = mar,
+ year = {1995},
+ issn = {0097-8418},
+ pages = {1--5},
+ numpages = {5},
+ url = {http://doi.acm.org/10.1145/199691.199694},
+ doi = {10.1145/199691.199694},
+ acmid = {199694},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+}
+
 @inproceedings{Caspersen:2006:NPO:1176617.1176741,
  author = {Caspersen, Michael E. and K\"{o}lling, Michael},
  title = {A novice's process of object-oriented programming},
@@ -51,4 +70,24 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {best practices, cognitive apprenticeship, continuous feedback, course material, instructional design, learning by doing, motivation, programming education},
+}
+
+@inbook{Kolling:2008,
+ Author = {K{\"o}lling, Michael and Barnes, David and Bennedsen, Jens and Caspersen, Michael},
+ Date-Added = {2012-09-27 00:17:07 +0000},
+ Date-Modified = {2012-09-27 00:17:07 +0000},
+ Doi = {10.1007/978-3-540-77934-6{\_}3},
+ Isbn = {978-3-540-77933-9},
+ Keywords = {Computer Science},
+ Pages = {17--29},
+ Publisher = {Springer Berlin / Heidelberg},
+ Title = {Apprentice-Based Learning Via Integrated Lectures and Assignments},
+ Title1 = {Reflections on the Teaching of Programming},
+ Title2 = {Lecture Notes in Computer Science},
+ Ty = {CHAP},
+ Url = {http://dx.doi.org/10.1007/978-3-540-77934-6\_3},
+ Volume = {4821},
+ Year = {2008},
+ Bdsk-Url-1 = {http://dx.doi.org/10.1007/978-3-540-77934-6\_3},
+ Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-3-540-77934-6%7B%5C\_%7D3}
 }
