--- a/prosessi.tex
+++ b/prosessi.tex
@@ -1,5 +1,8 @@
 \section{Ongelmaratkaisuprosessi}
 
+Tässä osiossa esittelen ensin yleisen ongelmaratkaisuprosessin, minkä jälkeen
+esittelen sen soveltamisen ohjelmointiin.
+
 \subsection{Yleinen ongelmaratkaisuprosessi}
 
 \subsection{Ohjelmointiin soveltaminen}
