--- a/thesis.bib
+++ b/thesis.bib
@@ -72,22 +72,19 @@
  keywords = {best practices, cognitive apprenticeship, continuous feedback, course material, instructional design, learning by doing, motivation, programming education},
 }
 
-@inbook{Kolling:2008,
- Author = {K{\"o}lling, Michael and Barnes, David and Bennedsen, Jens and Caspersen, Michael},
- Date-Added = {2012-09-27 00:17:07 +0000},
- Date-Modified = {2012-09-27 00:17:07 +0000},
- Doi = {10.1007/978-3-540-77934-6{\_}3},
- Isbn = {978-3-540-77933-9},
- Keywords = {Computer Science},
- Pages = {17--29},
- Publisher = {Springer Berlin / Heidelberg},
- Title = {Apprentice-Based Learning Via Integrated Lectures and Assignments},
- Title1 = {Reflections on the Teaching of Programming},
- Title2 = {Lecture Notes in Computer Science},
- Ty = {CHAP},
- Url = {http://dx.doi.org/10.1007/978-3-540-77934-6\_3},
- Volume = {4821},
- Year = {2008},
- Bdsk-Url-1 = {http://dx.doi.org/10.1007/978-3-540-77934-6\_3},
- Bdsk-Url-2 = {http://dx.doi.org/10.1007/978-3-540-77934-6%7B%5C\_%7D3}
+@incollection {Kolling:2008,
+   author = {Kölling, Michael and Barnes, David},
+   affiliation = {The University of Kent, Canterbury The Computing Laboratory Kent CT2 7NF United Kingdom},
+   title = {Apprentice-Based Learning Via Integrated Lectures and Assignments},
+   booktitle = {Reflections on the Teaching of Programming},
+   series = {Lecture Notes in Computer Science},
+   editor = {Bennedsen, Jens and Caspersen, Michael and Kölling, Michael},
+   publisher = {Springer Berlin / Heidelberg},
+   isbn = {978-3-540-77933-9},
+   keyword = {Computer Science},
+   pages = {17-29},
+   volume = {4821},
+   url = {http://dx.doi.org/10.1007/978-3-540-77934-6\_3},
+   note = {10.1007/978-3-540-77934-6\_3},
+   year = {2008}
 }
