general problem solving

--- a/prosessi.tex
+++ b/prosessi.tex
@@ -5,6 +5,35 @@ esittelen sen soveltamisen ohjelmointiin.
 
 \subsection{Yleinen ongelmaratkaisuprosessi}
 
+Yleistä ongelmaratkaisuprosessia on mietitty pitkään ja se on sovellettavissa
+monelle alalle, myös ohjelmointiin. Descartes, Hyman ja Anderson muodostavat
+hyvän rungon yleiselle ongelmaratkaisuprosessille
+\cite{Gries:1974:WTI:953057.810447}.
+
+Mitään asiaa ei tule koskaan hyväksyä totena ellei sille ole varmaa ja
+perusteltua tietoa. Jos et tiedä asian paikkaansapitävyyttä, niin älä oleta sen
+olevan totta. Tästä on apua varsinkin silloin, kun etsit tietoa ongelmaan ja sen
+ratkaisutavoista. Tarkista huolella lähteiden taustat ennenkuin alat soveltamaan
+saamaasi tietoa. Korjaaminen voi olla haastavaa virheellisen tiedon soveltamisen
+jälkeen.
+
+Vaikeat asiat tulee jakaa niin moneen osaan kuin mahdollista. Pieniä asioita on
+helpompi hallita kuin isoja. Tämän seurauksena yhden ison ongelman sijaan on
+monta pientä ongelmaa, jotka voi olla hyvinkin helppoja ratkaista. Voi olla
+hyvinkin mahdollista, että pienemmät ongelmat ovat entuudestaan tuttuja, joten
+niihin löytyy nopeasti ratkaisu.
+
+Toiset ongelmat ovat haastavampia kuin toiset. Kannattaa ensin ratkaista helpot
+ongelmat ja sitten vaikeammat. Helpot ongelmat voi olla nopeita ratkaista ja
+niiden ratkaiseminen tuo itsevarmuutta vaikeampia ratkastessa.
+
+Johtopäätökseen tulee olla kattavasti listattu ongelmaan liittyvät asiat ja
+selostuksen tulee olla niin yleinen ettei sitä voi jättää huomiotta.
+
+Aluksi on tärkeä käydä kaikki ongelman yksityiskohdat nopeasti moneen kertaan
+lävitse, jotta kokonaiskuva ongelmasta selviää. Tämän jälkeen ongelma on
+yksinkertainen jakaa moneen osaan.
+
 \subsection{Ohjelmointiin soveltaminen}
 
 \subsubsection{Mañana-periaate}
