--- a/prosessi.tex
+++ b/prosessi.tex
@@ -1,14 +1,14 @@
 \section{Ongelmaratkaisuprosessi}
 
-Tässä osiossa esittelen ensin yleisen ongelmaratkaisuprosessin, minkä jälkeen
-esittelen sen soveltamisen ohjelmointiin.
+Tässä osiossa esittellään ensin yleinen ongelmaratkaisuprosessi, minkä jälkeen
+sitä sovelletaan ohjelmointiin.
 
 \subsection{Yleinen ongelmaratkaisuprosessi}
 
-Yleistä ongelmaratkaisuprosessia on mietitty pitkään ja se on sovellettavissa
-monelle alalle, myös ohjelmointiin. Descartes, Hyman ja Anderson muodostavat
-hyvän rungon yleiselle ongelmaratkaisuprosessille
-\cite{Gries:1974:WTI:953057.810447}.
+Yleistä ongelmaratkaisuprosessia on tutkittu pitkään ja se on sovellettavissa
+monelle alalle, myös ohjelmointiin. Descartes, Hyman ja Anderson ovat
+muodostaneet yleiselle ongelmaratkaisuprosessille rungon, jossa on
+seuraavanlaisia piirteitä \cite{Gries:1974:WTI:953057.810447}.
 
 Mitään asiaa ei tule koskaan hyväksyä totena ellei sille ole varmaa ja
 perusteltua tietoa. Jos et tiedä asian paikkaansapitävyyttä, niin älä oleta sen
@@ -24,15 +24,16 @@ hyvinkin mahdollista, että pienemmät ongelmat ovat entuudestaan tuttuja, joten
 niihin löytyy nopeasti ratkaisu.
 
 Toiset ongelmat ovat haastavampia kuin toiset. Kannattaa ensin ratkaista helpot
-ongelmat ja sitten vaikeammat. Helpot ongelmat voi olla nopeita ratkaista ja
-niiden ratkaiseminen tuo itsevarmuutta vaikeampia ratkastessa.
+ongelmat ja sitten vaikeammat. Helpot ongelmat voivat olla nopeita ratkaista ja
+niiden ratkaiseminen tuo itsevarmuutta vaikeampien ongelmien parissa.
 
-Johtopäätökseen tulee olla kattavasti listattu ongelmaan liittyvät asiat ja
+Johtopäätökseen tulee olla kattavasti lueteltu ongelmaan liittyvät asiat ja
 selostuksen tulee olla niin yleinen ettei sitä voi jättää huomiotta.
+%TODO: tarkenna
 
 Aluksi on tärkeä käydä kaikki ongelman yksityiskohdat nopeasti moneen kertaan
 lävitse, jotta kokonaiskuva ongelmasta selviää. Tämän jälkeen ongelma on
-yksinkertainen jakaa moneen osaan.
+yksinkertaista jakaa moneen osaan. %TODO: SOVELLA!
 
 \subsection{Ohjelmointiin soveltaminen}
 
