--- a/xa.tex
+++ b/xa.tex
@@ -1,9 +1,9 @@
-\section{Extreme Apprenticeship}
+\section{Kisällioppiminen}
 
 % Tämä kappale kertoo tktl:llä käytettävästä pajamallista
 
 Extreme Apprenticeship on Helsingin yliopiston tietojenkäsittelytieteen
-laitoksella lanseerattu versio ohjelmoinnin pajaopetuksesta
+laitoksella lanseerattu versio ohjelmoinnin kisällioppimisesta
 \cite{Vihavainen:2011:EAM:1953163.1953196}.
 
 % Mitä ongelmia?
