johdanto seems to be aine-ready

--- a/johdanto.tex
+++ b/johdanto.tex
@@ -21,7 +21,16 @@ yksinkertaisista askelista, mikä ei vastaa todellisuutta. Lisäksi ne opettavat
 vain kielen rakenteita \cite{Astrachan:1995:ACA:199691.199694}. Merkittävän
 kokoiset tehtävät vaativat ulkoista tukea \cite{Kolling:2008} eli sopivaa
 kehitysympäristöä (IDE). Tavallisesti tällainen ympäristö ei anna hyvää tukea
-opettamis- ja oppimisprosessille. %TODO: Miksei?
+opettamis- ja oppimisprosessille, koska ne ovat liian monimutkaisia eikä
+ohjelmointikielen tuki ole täydellinen. Asiat ovat näiltä osin menneet paljon
+parempaan suuntaan viime vuosien aikana. Alussa ohjelmointiprosessin sijaan
+täytyy opetella kehitysympäristön käyttö, mikä luonnollisesti vie aikaa
+ohjelmoinnin opetukselta. Kehitysympäristön käyttö kuitenkin vähentää kieleen
+liittyvien rakenteiden opettelua, mutta silloin on entistä tärkeämpää ymmärtää,
+miksi luotu koodi on tietynlaista. Siksi on tärkeää ettei alussa käytetä kaikkia
+IDEn ominaisuuksia vaan opiskelijat luovat itse kaiken alusta asti, jotta heillä
+on mahdollisuus ymmärtää kirjoittamansa ohjelmakoodi ja miksi se toimii kuten
+toimii.
 
 Javan ottaminen opetuskieleksi on tuonut hyviä ja huonoja asioita mukanaan.
 Sille on kehitetty hyviä kehitysympäristöjä ja se on suhteellisen vakaa kieli.
@@ -30,7 +39,13 @@ Kuitenkin sen käyttöönotto lisäsi enemmän keskittymistä kielen rakenteisii
 Ohjelmointiprosessin jäädessä piiloon, opiskelijat eivät pysty ratkaisemaan
 annettuja haasteita tai heille kehittyy oma prosessi
 \cite{Caspersen:2006:NPO:1176617.1176741}. Yleensä itsekehittynyt prosessi
-johtaa huonoihin lopputuloksiin. %TODO: Millaisiin? Seurauksia? Esimerkkejä!
+johtaa epäpäteviin ja huonosti suunniteltuihin lopputuloksiin. Yleensä valitaan
+ensimmäinen mieleen tullut ratkaisu. Moni opiskelija on tyytyväinen löydettyään
+edes jonkun ratkaisun eivätkä ole halukkaita tutustumaan muihin
+ratkaisuvaihtoehtoihin. Jos ohjelmointikursseilla opetetaan
+järjestelmällisyyteen pohjautuvaa ongelmanratkaisuprosessia, niin se ei
+ainoastaan auta opiskelijoita kehittämään ratkaisuja vaan myös parantaa
+ratkaisujen laatua.
 
 Ohjelmoinnin oppiminen ei saa olla ainoana tavoitteena vaan myös koodin laadun
 kehitys on tärkeää.
