general problem solving

--- a/prosessi.tex
+++ b/prosessi.tex
@@ -27,13 +27,26 @@ Toiset ongelmat ovat haastavampia kuin toiset. Kannattaa ensin ratkaista helpot
 ongelmat ja sitten vaikeammat. Helpot ongelmat voivat olla nopeita ratkaista ja
 niiden ratkaiseminen tuo itsevarmuutta vaikeampien ongelmien parissa.
 
-Johtopäätökseen tulee olla kattavasti lueteltu ongelmaan liittyvät asiat ja
-selostuksen tulee olla niin yleinen ettei sitä voi jättää huomiotta.
-%TODO: tarkenna
+Johtopäätöksestä tulee selvitä kattavasti ongelmaan liittyvät erinäiset seikat
+sekä sen tulee olla niin yleinen, ettei sitä tule jäättää huomiotta. Kaikki
+ongelmaan liittyvät asiat tulee esitellä ja ne tulee ilmaista siten, ettei niitä
+voi tulkita väärin. Tällöin johtopäätös on selkeästi esitetty ja yleisesti
+ymmärrettävissä.
 
 Aluksi on tärkeä käydä kaikki ongelman yksityiskohdat nopeasti moneen kertaan
 lävitse, jotta kokonaiskuva ongelmasta selviää. Tämän jälkeen ongelma on
-yksinkertaista jakaa moneen osaan. %TODO: SOVELLA!
+yksinkertaista jakaa moneen osaan.
+
+Esimerkiksi tutkielman kirjoittamiseen voi soveltaa yleistä
+ongelmaratkaisuprosessia. Ensin on saatava yleiskuva aiheesta. Kun on yleiskuva,
+niin siitä voi kaivaa esiin pääpiirteet. Pääpiirteet voidaan jakaa pienempiin
+alilukuihin. Lopuksi tehdään yhteenveto, jossa kerrataan ongelmakohdat ja
+kerrotaan niistä yleisellä tasolla, mutta siten, että se on tulkittavissa
+oikein. Tässä on ensin jaettu isommat kokonaisuudet pienempiin ja vielä
+pienempiin osiin, jotka on sitten kirjoitettu auki. Lopuksi yhteenvedossa tehty
+päätelmä.
+
+Yleinen ongelmaratkaisuprosessi on sovellettavissa kaikkiin ongelmiin.
 
 \subsection{Ohjelmointiin soveltaminen}
 
