--- a/prosessi.tex
+++ b/prosessi.tex
@@ -50,6 +50,30 @@ Yleinen ongelmaratkaisuprosessi on sovellettavissa kaikkiin ongelmiin.
 
 \subsection{Ohjelmointiin soveltaminen}
 
+Yleinen ongelmaratkaisuprosessi on sovellettavissa ohjelmointiin ja sen
+seuraaminen tuo ohjelmointiin määrätietoisuutta ja puhtautta.
+
+\subsubsection{Griesin analogia}
+
+Gries esittelee hyvän analogian ohjelmointiin liittyvästä
+ongelmaratkaisuprosessista \cite{Gries:1974:WTI:953057.810447}:
+
+\begin{quotation}
+``Kaapinvalmistuskurssilla ohjaaja esittelee sahan, työtason, vasaran ja
+muutaman muun työkalun muutamassa minuutissa. Tämän jälkeen hän näyttää
+kauniin valmiin kaapin ja antaa opiskelijoille pari viikkoa aikaa tehdä oma
+kaappi. Ajattelisit ohjaajan olevan hullu!''
+\end{quotation}
+
+Analogia kuvaa hyvin ohjelmoinnin opetusta. Opiskelijoille annetaan työkalut ja
+näytetään pari esimerkkiohjelmaa, mutta ei kerrota, miten esimerkkiohjelmat on
+toteutettu ja miksi. Tämän tyyppinen opetus rikkoo yleisen
+ongelmaratkaisuprosessin pääpiirteitä. Opiskelijoille tulee kuvata ensin
+ongelma, sitten näyttää miten sitä lähdetään pilkkomaan pienempiin
+ongelmapalasiin. Tämän jälkeen tulee kertoa, mitä ohjelmointirakenteita
+käytetään minkäkin osaongelman kohdalla. Lopulta opiskelijalle on selvää, mistä
+ohjelma koostuu ja miksi mikäkin rakenne on kuhunkin kohtaan valittu.
+
 \subsubsection{Mañana-periaate}
 
 % Top-down, REM, stubit, ...
